--- a/themes/ingenuous/source/css/_variables.styl
+++ b/themes/ingenuous/source/css/_variables.styl
@@ -19,9 +19,9 @@ color-pinterest = #cb2027
 color-google = #dd4b39
 
 // Fonts
-font-sans = "Helvetica Neue", Helvetica, Arial, sans-serif
-font-serif = Georgia, "Times New Roman", serif
-font-mono = "Inconsolata", "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
+font-sans = "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+font-serif = "Noto Serif", Georgia, "Times New Roman", serif
+font-mono = "Source Code Pro", Consolas, Monaco, Menlo, Consolas, monospace
 font-icon = FontAwesome
 font-icon-path = "fonts/fontawesome-webfont"
 font-icon-version = "4.0.3"
